--- a/_config.yml
+++ b/_config.yml
@@ -69,6 +69,7 @@ author:
   bio              : "I am a sociologist at the University of Innsbruck"
   employer         : "University of Innsbruck"
   email            : "Pia.Blossfeld@uibk.ac.at"
+  institutional website : "http://sozweb.sozphil.uni-leipzig.de/de/personen/dr-pia-blossfeld.html"
   orcid            : "http://orcid.org/0000-0001-8629-2873"
   
 # Reading Files
@@ -138,6 +139,9 @@ collections:
   projects:
     output: true
     permalink: /:collection/:path/
+  cv:
+    output: true
+    permalink: /:collection/:path/
 
 
 
@@ -172,6 +176,15 @@ defaults:
   - scope:
       path: ""
       type: projects
+    values:
+      layout: single
+      author_profile: true
+      share: true
+      comment: true
+    # _cv
+  - scope:
+      path: ""
+      type: cv
     values:
       layout: single
       author_profile: true
