--- a/_config.yml
+++ b/_config.yml
@@ -65,10 +65,10 @@ analytics:
 # Site Author
 author:
   name             : "Pia N. Blossfeld"
-  avatar           : "profile.png"
+  avatar           : "images/Pia Blossfeld_2017.jpg"
   bio              : "I am a sociologist at the University of Innsbruck"
   employer         : "University of Innsbruck"
-  email            : "Pia.Blossfeld@uibk.ac.at"
+  email            : "Pia.Blossfel[at]uibk.ac.at"
   institutional website : "http://sozweb.sozphil.uni-leipzig.de/de/personen/dr-pia-blossfeld.html"
   orcid            : "http://orcid.org/0000-0001-8629-2873"
   
