--- a/_config.yml
+++ b/_config.yml
@@ -64,8 +64,8 @@ analytics:
 
 # Site Author
 author:
-  name             : "Pia N. Blossfeld"
-  avatar           : ""
+  name             : "Pia N. Blossfeld"  
+ ![image](https://github.com/PiaBlossfeld/PiaBlossfeld.github.io/blob/master/images/Pia%20Blossfeld_2017.JPG)
   bio              : "I am a sociologist at the University of Innsbruck"
   employer         : "University of Innsbruck"
   email            : "Pia.Blossfel[at]uibk.ac.at"
