--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ analytics:
 # Site Author
 author:
   name             : "Pia N. Blossfeld" 
-  avatar           : "Pia%20Blossfeld_2017.jpg"
+  avatar           : "PiaBlossfeld.png"
   bio              : "I am a sociologist at the University of Innsbruck"
   employer         : "University of Innsbruck"
   email            : "Pia.Blossfel[at]uibk.ac.at"
