--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ author:
   avatar           : "PiaBlossfeld.png"
   bio              : "I am a sociologist at the University of Innsbruck"
   employer         : "University of Innsbruck"
-  email            : "Pia.Blossfel[at]uibk.ac.at"
+  email            : "Pia.Blossfeld[at]uibk.ac.at"
   institutional website : "http://sozweb.sozphil.uni-leipzig.de/de/personen/dr-pia-blossfeld.html"
   orcid            : "http://orcid.org/0000-0001-8629-2873"
   
