--- a/_config.yml
+++ b/_config.yml
@@ -64,9 +64,9 @@ analytics:
 
 # Site Author
 author:
-  name             : "Pia N. Blossfeld" 
+  name             : "Dr. Pia N. Blossfeld" 
   avatar           : "PiaBlossfeld.png"
-  bio              : "I am a sociologist at the University of Innsbruck"
+  bio              : "I am a PostDoc at the University of Innsbruck"
   employer         : "University of Innsbruck"
   email            : "Pia.Blossfeld[at]uibk.ac.at"
   institutional website : "http://sozweb.sozphil.uni-leipzig.de/de/personen/dr-pia-blossfeld.html"
