--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,6 +12,9 @@ main:
     
   - title: "CV"
     url: /cv/
+    
+  - title: "Workshops and Conferences"
+    url: /workshopsandconferences/
 
   - title: "Contact"
     url: /contact/
