Update _config.yml image changed

--- a/_config.yml
+++ b/_config.yml
@@ -65,7 +65,7 @@ analytics:
 # Site Author
 author:
   name             : "Dr. Pia N. Blossfeld" 
-  avatar           : "PiaBlossfeld.png"
+  avatar           : "PiaBlossfeldSmall.jpg"
   bio              : "I am a PostDoc at the University of Innsbruck"
   employer         : "University of Innsbruck"
   email            : "Pia.Blossfeld[at]uibk.ac.at"
