--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -13,7 +13,7 @@ main:
   - title: "CV"
     url: /cv/
     
-  - title: "Conferences, Workshops and Public Outreach"
+  - title: "Conferences and Public Outreach"
     url: /workshopsandconferences/
 
   - title: "Contact"
